solid/src/main/java/org/example/L/good/Main.java
package org.example.L.good;

public class Main {

  public static void main(String[] args) {










  }




}
