solid/src/main/java/org/example/L/Bad/Main.java
package org.example.L.Bad;

import java.util.ArrayList;
import java.util.List;

public class Main {

  public static void main(String[] args) {


      Bird duck = new Duck();
      duck.fly();

      Bird penguin = new Penguin();
      penguin.fly();








  }




}
